--- a/ui/index.html
+++ b/ui/index.html
@@ -232,7 +232,7 @@
 					</div>
 					<input class="w3-check" type="checkbox" value="true" id="likeA" checked/>
 					<label class="w3-validate">I Like it!</label>
-					<input type="button" class="w3-btn w3-right w3-theme" value="Send" id="add_btn"/>
+					<input class="w3-btn w3-right w3-theme" type="submit" value="Send" id="add_btn"/>
 				</form>
 			</div>
 		</div>
@@ -287,7 +287,7 @@
 			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required/>
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required/>
-			<input class="w3-btn-block w3-green w3-section w3-padding" type="button" value="Login" id="login_btn"/>
+			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Login" id="login_btn"/>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"/> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
@@ -310,7 +310,7 @@
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="passwordS" required/>
 			<label><b>Email</b></label>
 			<input class="w3-input w3-border" type="email" placeholder="Enter Email" id="emailS" required/>
-			<input class="w3-btn-block w3-green w3-section w3-padding" type="button" value="Signup" id="signup_btn"/>
+			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Signup" id="signup_btn"/>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked" required/> For Signup, you must read and agree to our terms and conditions.
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
