--- a/ui/index.html
+++ b/ui/index.html
@@ -220,17 +220,17 @@
 				<form class="w3-container w3-card-4 w3-padding-16 w3-white">
 					<div class="w3-group">
 						<label class="w3-label">Name</label>
-						<input class="w3-input" type="text" id="nameA" required/>
+						<input class="w3-input" type="text" id="name" required/>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Email</label>
-						<input class="w3-input" type="text" id="emailA" required/>
+						<input class="w3-input" type="text" id="email" required/>
 					</div>
 					<div class="w3-group">
 						<label class="w3-label">Subject</label>
-						<input class="w3-input" type="text" id="subjectA" required/>
+						<input class="w3-input" type="text" id="subject" required/>
 					</div>
-					<input class="w3-check" type="checkbox" value="true" id="likeA" checked/>
+					<input class="w3-check" type="checkbox" value="true" id="like" checked/>
 					<label class="w3-validate">I Like it!</label>
 					<input class="w3-btn w3-right w3-theme" type="submit" value="Send" id="add_btn"/>
 				</form>
