--- a/ui/index.html
+++ b/ui/index.html
@@ -67,7 +67,7 @@
 		</ul>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
-	<div class="w3-panel w3-red w3-hover-opacity">
+	<div id="myNote" class="w3-panel w3-red w3-hover-opacity">
 		<marquee><p>Hey, Welcome Anonymous! Notification 4 U.</p></marquee>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
@@ -148,13 +148,6 @@
 		<i>"Make it as simple as possible, but not simpler."</i></p>
 		<p>Albert Einstein</p>
 	</div>
-	
-	<div id="login_area">
-        <center>Loading login status...</center>
-    </div>
-	<div id="articles">
-        <center>Loading articles...</center>
-    </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
