--- a/ui/index.html
+++ b/ui/index.html
@@ -67,14 +67,14 @@
 		</ul>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->	
-	<div id="myNote" class="w3-panel w3-red w3-hover-opacity">
+	<div class="w3-panel w3-red w3-hover-opacity">
 		<marquee><p>Hey, Welcome Anonymous! Notification 4 U.</p></marquee>
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
-	<div class="w3-container w3-center w3-animate-top">
-		<h1>Welcome!!!</h1>
+	<div id="myMsg" class="w3-container w3-center w3-animate-top">
+		<!--<h1>Welcome!!!</h1>-->
 	</div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
