--- a/ui/Sarvesh.html
+++ b/ui/Sarvesh.html
@@ -165,7 +165,7 @@
 <!------------------------------------------------------------------------------------------------------------------------------------------->
                     <hr>
                     
-                    <div class="w3-content w3-display-container" style="max-width:300px">
+                    <div class="w3-display-container" style="max-width:300px">
                         <a class="twitter-timeline" href="https://twitter.com/sarvesh_smcs2">Tweets by sarvesh_smcs2</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
