--- a/ui/index.html
+++ b/ui/index.html
@@ -76,6 +76,9 @@
 	<div id="myMsg" class="w3-container w3-center w3-animate-top">
 		<h1>Welcome!!!</h1>
 	</div>
+	<div id="articles">
+        <center>Loading articles...</center>
+    </div>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
 <hr>
 <!------------------------------------------------------------------------------------------------------------------------------------------->
