--- a/ui/index.html
+++ b/ui/index.html
@@ -283,10 +283,12 @@
 			<input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" id="username" required/>
 			<label><b>Password</b></label>
 			<input class="w3-input w3-border" type="password" placeholder="Enter Password" id="password" required/>
+			<div id="log">
 			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Login" id="login_btn"/>
 			<!--
 			<input class="w3-btn-block w3-green w3-section w3-padding" type="submit" value="Logout" id="logout_btn" style="visibility:hidden"/>
 			-->
+			</div>
 			<input class="w3-check w3-margin-top" type="checkbox" checked="checked"/> Remember me
         </div>
 		<div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
